k8s/namespace.yml
# k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    name: devsecops
    security.policy: restricted
  annotations:
    # Anotaciones de seguridad para el namespace
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
