k8s/ingress.yml
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-app-ingress
  namespace: devsecops
  annotations:
    # Anotaciones de seguridad para el Ingress
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Configuraciones de seguridad adicionales
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"

spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: app.rondon.cloud # El subdominio público que quieres usar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsecops-app-service # El nombre de tu Service existente
            port:
              number: 80 # El puerto de tu Service
